syntax = "proto3";

option csharp_namespace = "Pantheon.Hermes.Grpc";

service HermesApiGrpc {
  rpc GetToken(GetTokenRequest) returns(GetTokenResponse);
}

enum CredentialsType {
  Unknown = 0;
  DeviceId = 1;
  Password = 2;
}

message GetTokenRequest {
    CredentialsType CredentialsType = 1;
    string DeviceId = 2;
    string Username = 3;
    string Password = 4;
    repeated string RequestedScopes = 5;
}

message GetTokenResponse {
  string Id = 1;
  string AccessToken = 2;
  string Username = 3;
  repeated string Scopes = 4;
}
